# repro

.github/workflows/: main.yaml
barista-3/: composer.json
barista-3/app/Model/: HelperLoader.php
barista-3/app/Presenters/: HomepagePresenter.php
barista-3/app/Presenters/templates/Homepage/: bar.latte  foo.latte
barista-3/config/: services.neon
ca-path-test/: README.md  flake.nix
dimcli-natural-static/: CMakeLists.txt  main.cpp  readme.md
hakyll-poc-messed-cycle/: .gitignore  error.gv  flake.nix  hakyll-poc-messed-cycle.cabal  hakyll-poc-messed-cycle.nix  readme.md
hakyll-poc-messed-cycle/content/cs/: @menu.md
hakyll-poc-messed-cycle/content/cs/news/: 2021-11-22-website-launch.md
hakyll-poc-messed-cycle/content/en/: @menu.md
hakyll-poc-messed-cycle/content/en/news/: 2021-11-22-website-launch.md
hakyll-poc-messed-cycle/src/: Common.hs  LanguageChooser.hs  site.hs
hakyll-poc-messed-cycle/templates/: layout.html  post.html
parcel-9092/: index.html  index.js  package-lock.json  package.json
parcel-netlify-cms/: package-lock.json  package.json
parcel-netlify-cms/admin/: config.yaml  index.html
parcel-sw-subdir/: index.html  package-lock.json  package.json
parcel-sw-subdir/js/: index.js  sw.js
parcel-sw-url-context/: index.html  index.js  package-lock.json
rector-6683/: composer.json  rector.php  test.php
rector-7194/: composer.json  rector.php  test.php
rector-7231/: TestRector.php  composer.json  rector.php  test.php
rector-7232/: composer.json  rector.php
rector-7232/src/: Bar.php
rector-7232/src/Foo/: Foo.php
yarn2nix-incomprehensible-error/: README.md  default.nix  package.json
