name: hakyll-poc-messed-cycle
version: 0.0.1
build-type: Simple
cabal-version: >= 1.10

executable site
    main-is: site.hs
    hs-source-dirs: src
    build-depends:
        base >= 4.8 && < 4.15,
        extra >= 1.7 && < 1.8,
        filepath >= 1.4 && < 1.5,
        hakyll >= 4.9 && < 4.16,
        mtl
    ghc-options:
        -- Required for watch on Windows, breaks metadata atm:
        -- https://github.com/jaspervdj/hakyll/issues/903
        -- -threaded
        -- Paralellize builds
        -- -rtsopts -with-rtsopts=-N
        -Wall -fno-warn-tabs
